# spy_credit_spread

./: .env.live.template  .gitignore  AGENT_COORDINATION_README.md  GEMINI.md  LIVE_TRADING_DEPLOYMENT_PLAN.md  PRE_DEPLOYMENT_CHECKLIST.md  PRE_LIVE_TEST_PLAN.md  README.md  RECOVERY_PLAYBOOK.md  START_PAPER_TRADING_DAY.bat  TODO.md  backtester.py  console_live.py  data_manager.py  graphify_update.py  ibkr_trading.py  latest_plan.md  llm_adapter.py  main.py  moomoo_trading.py  package-lock.json  paper_trading.py  pytest.ini  requirements.txt  run-live.sh  start.py  test.py  test_direct.py  updates.md
.claude/: moomoo_api_reference.md  moomoo_gap_analysis.md  moomoo_usage_inventory.md
.gemini/: settings.json
brokers/: ibkr_trading.py  moomoo_trading.py
config/: .env.example  events_2026.json  presets.json
core/: __init__.py  backtest_intraday.py  backtest_orb.py  broker.py  calendar.py  chain.py  connection_flags.py  fill_watcher.py  filters.py  journal.py  leader.py  logger.py  monitor.py  moomoo_reconciler.py  notifier.py  order_flow.py  paper_gate.py  presets.py  risk.py  scanner.py  settings.py  telegram_bot.py  yf_safe.py
docs/: HOW_IT_WORKS.md  MOOMOO_REVIEW.md  MULTI_STRATEGY_PLAN.md  WIREFRAMES.md  server_deployment.md  wireframe.html
nautilus/: README.md  pyproject.toml  run_backtest.py  run_live.py
nautilus/adapters/futu_options/: config.py  data.py  execution.py  factories.py  providers.py
nautilus/config/: live_config.py  settings.py
nautilus/strategies/: orb_spread.py
nautilus/tests/: conftest.py  test_instruments.py  test_orb_strategy.py
(+170 files in other folders)
